--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
+    "styled-components": "^6.1.0",
     "swiper": "^11.0.1"
   },
   "devDependencies": {
