--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
+    "react-burger-menu": "2.7.1",
     "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
     "styled-components": "^6.1.0",
