--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-burger-menu": "2.7.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
-    "styled-components": "^6.1.0",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.1",
     "swiper": "^11.0.1"
   },
   "devDependencies": {
